# Delusion

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
DelusionSharp/: BodyType.cs  BoxCollider.cs  DelusionSharp.csproj  DelusionSharp.sln  Entity.cs  Input.cs  Internals.cs  Key.cs  Rigidbody.cs  Script.cs  Sprite.cs  Texture2D.cs  Transform.cs  UniqueId.cs  Vector2.cs
DelusionSharp/Properties/: AssemblyInfo.cs
Editor/: CMakeLists.txt
Editor/include/: Editor.hpp  Project.hpp
Editor/include/editor/: Editor.hpp
Editor/include/editor/ui/: AssetBrowserPanel.hpp  HierarchyPanel.hpp  PropertiesPanel.hpp  ViewportPanel.hpp
Editor/src/: Editor.cpp  Editor.ixx  main.cpp  shader.wgsl
Editor/src/editor/: Editor.cpp
Editor/src/editor/ui/: AssetBrowserPanel.cpp  HierarchyPanel.cpp  PropertiesPanel.cpp  ViewportPanel.cpp
Engine/: CMakeLists.txt
Engine/include/delusion/: AssetManager.hpp  Components.hpp  Engine.hpp  Entity.hpp  Exception.hpp  Image.hpp  Macros.hpp  Metadata.hpp  MetadataSerde.hpp  Random.hpp  Scene.hpp  SceneSerde.hpp  UniqueId.hpp  Utilities.hpp  Window.hpp
Engine/include/delusion/audio/: AudioBuffer.hpp  AudioClip.hpp  AudioPlayer.hpp
Engine/include/delusion/collections/: Queue.hpp
Engine/include/delusion/formats/: ImageDecoder.hpp
Engine/include/delusion/graphics/: GraphicsBackend.hpp  OrthographicCamera.hpp  Renderer.hpp  Shader.hpp  Texture2D.hpp
Engine/include/delusion/input/: Key.hpp
Engine/include/delusion/io/: FileUtilities.hpp
Engine/include/delusion/scripting/: CSharpAssembly.hpp  CSharpClass.hpp  CSharpDomain.hpp  CSharpField.hpp  CSharpObject.hpp  CSharpType.hpp  EngineType.hpp  Internals.hpp  Lua.hpp  Script.hpp  ScriptEngine.hpp  Table.hpp
Engine/src/: Components.ixx  Engine.cpp  Entity.ixx  Image.ixx  MetadataSerde.cpp  Scene.cpp  Scene.ixx  SceneSerde.cpp
Engine/src/audio/: AudioClip.cpp  AudioPlayer.cpp
Engine/src/formats/: ImageDecoder.cpp  ImageDecoder.ixx
Engine/src/graphics/: GraphicsBackend.cpp  Renderer.cpp  Renderer.ixx  Shader.cpp  Shader.ixx  Texture2D.cpp  Texture2D.ixx
Engine/src/scripting/: Lua.cpp
firstparty/: CMakeLists.txt
firstparty/cimage/: Cargo.toml  build.rs
firstparty/cimage/src/: lib.rs
src/: main.cpp  shader.wgsl
