[package]
name = "cimage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
image = { version = "0.24.7", default-features = false, features = ["png"] }

[build-dependencies]
cbindgen = "0.26.0"
